correct profile__info align, overflow

--- a/blocks/profile/__author/profile__author.css
+++ b/blocks/profile/__author/profile__author.css
@@ -5,7 +5,11 @@
   max-width: 336px;
 }
 
-
+@media screen and (max-width: 600px) {
+  .profile__author {
+    max-width: 282px;
+  }
+}
 
 
 
